OY-5458 Muutetaan testit JUnit5-testeiksi